Changes Requested by Amir

--- a/Road to Recovery/pages/escortedForm.html
+++ b/Road to Recovery/pages/escortedForm.html
@@ -334,7 +334,7 @@
         function checkCity(value) {
             if (value == "-1") {
                 // validate the fields here
-                return [false, "אנא בחר עיר"];
+                return [false, "אנא בחר יישוב"];
             } else {
                 return [true, ""];
             }
@@ -541,7 +541,7 @@
                                             </div>
                                             <div class="col-sm-6">
                                                 <div class="form-group">
-                                                    <label class="col-sm-3 control-label">טלפון בית</label>
+                                                    <label class="col-sm-3 control-label">טלפון נוסף</label>
                                                     <div class="col-sm-6">
                                                         <input id="HomePhone" name="HomePhone" type="text" class="form-control">
                                                     </div>
@@ -563,7 +563,7 @@
                                         <div class="row m-l-10 m-r-10">
                                             <div class="col-sm-6">
                                                 <div class="form-group">
-                                                    <label class="col-sm-3 control-label">עיר</label>
+                                                    <label class="col-sm-3 control-label">יישוב</label>
                                                     <div class="col-sm-6">
                                                         <input id="city" name="city" type="text" class="form-control">
                                                     </div>
