--- a/Road to Recovery/pages/viewVolunteer.html
+++ b/Road to Recovery/pages/viewVolunteer.html
@@ -9,7 +9,10 @@
     <link rel="shortcut icon" href="assets/images/favicon_1.ico">
 
     <title>לקוחות</title>
-
+    
+    <style type="text/css">
+        .dt-body-left{text-align:left;}
+    </style>
     <!-- DataTables -->
     <link href="../plugins/datatables/jquery.dataTables.min.css" rel="stylesheet" type="text/css" />
     <link href="../plugins/datatables/buttons.bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -50,7 +53,14 @@
             //$('#menu').load('menu.html');
 
             //Create a DataTable from the Table
-            t = $('#datatable-buttons').DataTable();
+            t = $('#datatable-buttons').DataTable({
+                columnDefs: [
+                    {
+                        targets: 5,
+                        className: 'dt-body-left'
+                    }
+                ]
+            });
 
             refreshTable();
         });
@@ -89,9 +99,18 @@
                         }
 
 
-                        t.row.add([arr_volunteers[i].DisplayName, arr_volunteers[i].TypeVol, arr_volunteers[i].CellPhone, arr_volunteers[i].HomePhone, arr_volunteers[i].Email, btnStr]).draw(false);         
+                        t.row.add([arr_volunteers[i].DisplayName, arr_volunteers[i].TypeVol, arr_volunteers[i].CellPhone, arr_volunteers[i].HomePhone,arr_volunteers[i].City, arr_volunteers[i].Email, btnStr]).draw(false);         
+                       
                     }
 
+                    //$('#datatable-buttons').DataTable({
+                    //    columnDefs: [
+                    //        {
+                    //            targets: 4,
+                    //            className: 'dt-body-left'
+                    //        }
+                    //    ]
+                    //});
                     t.columns([1]).order('asc').draw();
 
                     $('#datatable-buttons tbody').on('click', '#edit', function () {
@@ -312,10 +331,10 @@
                                         </p>
                                     </div>
                                     <div class="col-sm-4 text-right">
-                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-success btn-sm m-b-5' id='show' title='פרטים נוספים'><i class='fa fa-wpforms'></i></button> צפייה
-                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-primary btn-sm m-b-5' id='edit' title='ערוך'><i class='ti-pencil'></i></button> ערוך
-                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-danger btn-sm m-b-5' id='remove' title='מחק'><i class='fa fa-remove'></i></button> מחק
-                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-warning btn-sm m-b-5' id='reactive' title='שחזר'><i class='fa fa-undo'></i></button> שחזר
+                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-success btn-sm m-b-5' id='show' title='צפייה'><i class='fa fa-wpforms'></i></button> צפייה
+                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-primary btn-sm m-b-5' id='edit' title='עריכה'><i class='ti-pencil'></i></button> עריכה
+                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-danger btn-sm m-b-5' id='remove' title='מחיקה'><i class='fa fa-remove'></i></button> מחיקה
+                                        <button type='button' class='btn btn-icon waves-effect waves-light btn-warning btn-sm m-b-5' id='reactive' title='שחזור'><i class='fa fa-undo'></i></button> שחזור
                                     </div>
                                 </div>
                                 <div class="row">
@@ -333,12 +352,13 @@
                                 <table id="datatable-buttons" class="table table-striped table-bordered">
                                     <thead>
                                         <tr>
-                                            <th>שם מתנדב</th>
-                                            <th>סוג מתנדב</th>
+                                            <th>שם מתנדב/ת</th>
+                                            <th>סוג מתנדב/ת</th>
                                             <th>טלפון</th>
-                                            <th>טלפון בית</th>
-                                            <th>אימייל</th>
-                                            <th>ערוך מתנדב</th>     
+                                            <th>טלפון נוסף</th>
+                                            <th>יישוב</th>
+                                            <th>Email</th>
+                                            <th>אפשרויות</th>     
                                         </tr>
                                     </thead>
                                     <tbody></tbody>
