--- a/Road to Recovery/pages/volunteerForm.html
+++ b/Road to Recovery/pages/volunteerForm.html
@@ -10,7 +10,7 @@
 
     <link rel="shortcut icon" href="assets/images/favicon_1.ico">
 
-    <title>לקוח</title>
+    <title>מתנדב</title>
 
     <link href="../plugins/switchery/switchery.min.css" rel="stylesheet" />
     <link href="assets/css/bootstrap-rtl.min.css" rel="stylesheet" type="text/css">
@@ -523,7 +523,7 @@
         function checkCity(value) {
             if (value == "-1") {
                 // validate the fields here
-                return [false, "אנא בחר עיר"];
+                return [false, "אנא בחר יישוב"];
             } else {
                 return [true, ""];
             }
@@ -716,7 +716,7 @@
                                             </div>
                                             <div class="col-sm-6">
                                                 <div class="form-group">
-                                                    <label class="col-sm-3 control-label">טלפון בית</label>
+                                                    <label class="col-sm-3 control-label">טלפון נוסף</label>
                                                     <div class="col-sm-6">
                                                         <input id="HomePhone" name="HomePhone" type="text" class="form-control">
                                                     </div>
@@ -747,7 +747,7 @@
                                                 <div class="form-group">
                                                     <label class="col-sm-3 control-label">Email</label>
                                                     <div class="col-sm-6">
-                                                        <input id="email" name="email" type="text" class="form-control">
+                                                        <input id="email" name="email" type="text" class="form-control" style="text-align:left;">
                                                     </div>
                                                 </div>
                                             </div>
@@ -791,7 +791,7 @@
                                     <div class="row m-l-10 m-r-10">
                                         <div class="col-sm-6">
                                             <div class="form-group">
-                                                <label class="col-sm-3 control-label">עיר</label>
+                                                <label class="col-sm-3 control-label">יישוב</label>
                                                 <div class="col-sm-6">
                                                     <input id="city" name="city" type="text" class="form-control">
                                                 </div>
@@ -815,14 +815,14 @@
                                         </div>
                                     </div>
                                     <div class="row m-l-10 m-r-10">
-                                        <div class="col-sm-6">
+                                        <!--<div class="col-sm-6">
                                             <div class="form-group">
                                                 <label class="col-sm-3 control-label">תאריך לידה</label>
                                                 <div class="col-sm-6">
                                                     <input id="birthDate" name="birthDate" type="text" class="form-control">
                                                 </div>
                                             </div>
-                                        </div>
+                                        </div>-->
                                         <div class="col-sm-6">
                                             <div class="form-group">
                                                 <label class="col-sm-3 control-label">הערות</label>
@@ -1017,11 +1017,11 @@
                     //  var status = $("#statusVolunteer").val();
                     //if ($("#activeVolunteer").is(':checked')) var IsActive = true;
                     var gender = $("#gender").val();
-                    var birthDate = $("#birthDate").val();
-                    var bDay = parseInt(birthDate.substring(0, 2));
-                    var bMonth = parseInt(birthDate.substring(3, 5)) - 1;
-                    var bYear = parseInt(birthDate.substring(6));
-                    var bdate = new Date(bYear, bMonth, bDay);
+                    //var birthDate = $("#birthDate").val();
+                    //var bDay = parseInt(birthDate.substring(0, 2));
+                    //var bMonth = parseInt(birthDate.substring(3, 5)) - 1;
+                    //var bYear = parseInt(birthDate.substring(6));
+                    //var bdate = new Date(bYear, bMonth, bDay);
                     var cellphone2 = $("#phone2").val();
                     var homePhone = $("#HomePhone").val();
                     //var preferRoute3 = $("#PreferedDrivers3").val();
@@ -1053,8 +1053,8 @@
                     //if (cellphone2 == "") { cellphone2 = "0"; }
                     volunteer = {
                         firstNameH: firstNameH, firstNameA: nameA, lastNameH: lastNameH, lastNameA: lastNameA, cellPhone: cellPhone, cellphone2: cellphone2, homePhone: homePhone,
-                        city: city, address: address, email: email, birthdate: bdate, joinDate: jdate, gender: gender, KnowsArabic: knowsArabic,
-                        typeVol: typeVol, IsActive: active,Remarks:remark, DisplayName:displayName
+                        city: city, address: address, email: email,joinDate: jdate, gender: gender, KnowsArabic: knowsArabic,
+                        typeVol: typeVol, IsActive: active, Remarks: remark, DisplayName: displayName //birthdate: bdate,
                     }
                     $.ajax({
                         dataType: "json",
@@ -1076,7 +1076,7 @@
 
                         },
                         error: function (err) {
-                            alert("Error");
+                            alert("Error in setVolunteer: "+ err.responseText);
                         }
                     });
                     //END OF Insert Product Code
@@ -1182,7 +1182,7 @@
             //}
 
             if (!CityExists) {
-                alert("עליכם לבחור עיר מתוך הרשימה");
+                alert("עליכם לבחור יישוב מתוך הרשימה");
             }
 
             //if (!patientAExists) {
@@ -1206,10 +1206,10 @@
             var jdateMatch = reg.test(jDate);
             if (!jdateMatch) alert("תאריך ההצטרפות שהוזן אינו חוקי");
 
-            var bDate = $("#birthDate").val();
-            var reg = new RegExp("[0-9]{2}\/[0-9]{2}\/[0-9]{4}");
-            var bdateMatch = reg.test(bDate);
-            if (!bdateMatch) alert("תאריך הלידה שהוזן אינו חוקי");
+            //var bDate = $("#birthDate").val();
+            //var reg = new RegExp("[0-9]{2}\/[0-9]{2}\/[0-9]{4}");
+            //var bdateMatch = reg.test(bDate);
+            //if (!bdateMatch) alert("תאריך הלידה שהוזן אינו חוקי");
 
 
             //var Time = $("#hour").val() + ":" + $("#minute").val();
@@ -1225,7 +1225,7 @@
             //    });
             //    if (atLeastOneIsChecked == 0) alert("בנסיעה למלווים בלבד, יש לבחור לפחות מלווה אחד");
             //}
-            if (!CityExists || !volType || !gender || !bdateMatch || !jdateMatch) {
+            if (!CityExists || !volType || !gender || !jdateMatch) { //!bdateMatch
                 return false;
             } else return true;
         }
